src/objects/Global_Comment_Code__c.object
<CustomObject>
    <description>Master Detail with Local Comment Code</description>
    <fields>
        <fullName>Comment_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Comment Group that this Global Comment Code is associated to</description>
        <label>Comment Group</label>
        <referenceTo>Comment_Group__c</referenceTo>
        <relationshipLabel>Global Comment Code</relationshipLabel>
        <relationshipName>Global_Comment_Code</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Criticality__c</fullName>
        <description>This indicates if a Comment Code falls under Critical or Non-Critical</description>
        <inlineHelpText>If Checked indicates a critical type else non-critical</inlineHelpText>
        <label>Criticality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>Non-Critical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_not_send_survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not send survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Comment_Path__c</fullName>
        <formula>text(Level_1__c ) &amp;&apos;/&apos;&amp;  text(Level_2__c)  &amp;&apos;/&apos;&amp; Level_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Comment Path</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCR_CID__c</fullName>
        <description>This is an ID that will be populated by the C3DB system</description>
        <externalId>true</externalId>
        <label>GCR_CID</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if the Global Comment Code needs to be marked Inactive</description>
        <inlineHelpText>If checked indicates that this Global Comment Code is inactive</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level_1__c</fullName>
        <description>This is going to be the First Level Identifying the Type of Comment</description>
        <label>Level 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adverse Event</fullName>
                </value>
                <value>
                    <fullName>Availability</fullName>
                </value>
                <value>
                    <fullName>Complaints Other</fullName>
                </value>
                <value>
                    <fullName>Inquiry</fullName>
                </value>
                <value>
                    <fullName>Product Quality Complaint</fullName>
                </value>
                <value>
                    <fullName>Testimonial</fullName>
                </value>
                <value>
                    <fullName>Unable to Classify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level_2__c</fullName>
        <description>This indicates the next level of detail after the type of comment has been classified</description>
        <label>Level 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adverse Event</fullName>
                </value>
                <value>
                    <fullName>Alleged Contamination</fullName>
                </value>
                <value>
                    <fullName>Availability</fullName>
                </value>
                <value>
                    <fullName>Consumer Preference / Dislikes</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Damage to Property</fullName>
                </value>
                <value>
                    <fullName>Dissatisfied with Product Performance</fullName>
                </value>
                <value>
                    <fullName>Environment</fullName>
                </value>
                <value>
                    <fullName>Label, Insert Legibility or Confusing</fullName>
                </value>
                <value>
                    <fullName>Marketing Loyalty</fullName>
                </value>
                <value>
                    <fullName>Marketing Personal Information</fullName>
                </value>
                <value>
                    <fullName>Marketing Pricing</fullName>
                </value>
                <value>
                    <fullName>Marketing Promotion, Advertising</fullName>
                </value>
                <value>
                    <fullName>Marketing Shopping Experience</fullName>
                </value>
                <value>
                    <fullName>Missing Label, Coding, Insert</fullName>
                </value>
                <value>
                    <fullName>Moe</fullName>
                </value>
                <value>
                    <fullName>Packaging or Product Mix Up, Mislabel</fullName>
                </value>
                <value>
                    <fullName>Pet Health Effect</fullName>
                </value>
                <value>
                    <fullName>Product Information</fullName>
                </value>
                <value>
                    <fullName>Product or Packaging Malfunction Hazard</fullName>
                </value>
                <value>
                    <fullName>Product or Packaging Non Functioning or Damaged (Not Hazardous)</fullName>
                </value>
                <value>
                    <fullName>Product Usage</fullName>
                </value>
                <value>
                    <fullName>Safety Closure defect, child resistant closure</fullName>
                </value>
                <value>
                    <fullName>Sensory</fullName>
                </value>
                <value>
                    <fullName>Suspect Counterfeit</fullName>
                </value>
                <value>
                    <fullName>Suspect Tampering</fullName>
                </value>
                <value>
                    <fullName>Testimonial</fullName>
                </value>
                <value>
                    <fullName>Volume/Fill/Count/missing parts</fullName>
                </value>
                <value>
                    <fullName>Unable to Classify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level_3__c</fullName>
        <description>This is the 3rd level</description>
        <label>Level 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine if the &apos;Reason Required&apos; field should display for comment codes.</description>
        <label>Reason Required</label>
        <type>Checkbox</type>
    </fields>
    <label>Global Comment Code</label>
    <listViews>
        <fullName>CX_exclusions</fullName>
        <columns>NAME</columns>
        <columns>Do_not_send_survey__c</columns>
        <columns>Level_1__c</columns>
        <columns>Level_2__c</columns>
        <columns>Level_3__c</columns>
        <columns>Full_Comment_Path__c</columns>
        <columns>Criticality__c</columns>
        <columns>Inactive__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Do_not_send_survey__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>CX exclusions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>GCR_CID</fullName>
        <columns>NAME</columns>
        <columns>GCR_CID__c</columns>
        <columns>Level_1__c</columns>
        <columns>Level_2__c</columns>
        <columns>Level_3__c</columns>
        <columns>Full_Comment_Path__c</columns>
        <columns>Criticality__c</columns>
        <columns>Inactive__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GCR_CID__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Level_3__c</field>
            <operation>startsWith</operation>
            <value>Tapes</value>
        </filters>
        <label>GCR CID</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_View1</fullName>
        <columns>NAME</columns>
        <columns>GCR_CID__c</columns>
        <columns>Full_Comment_Path__c</columns>
        <columns>Level_1__c</columns>
        <columns>Level_2__c</columns>
        <columns>Level_3__c</columns>
        <columns>Criticality__c</columns>
        <columns>Inactive__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GCR_CID__c</field>
            <operation>equals</operation>
            <value>10277</value>
        </filters>
        <label>My View1</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>GCC-{0000}</displayFormat>
        <label>Global Comment Code Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Global Comment Code</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>